<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_category_api"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:key="api_host"
            android:title="@string/settings_api_host"
            android:summary="@string/settings_api_host_summary"
            android:defaultValue="http://localhost"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:key="api_port"
            android:title="@string/settings_api_port"
            android:summary="@string/settings_api_port_summary"
            android:defaultValue="8080"
            android:inputType="number"
            app:iconSpaceReserved="false" />

        <SeekBarPreference
            android:key="poll_interval"
            android:title="@string/settings_poll_interval"
            android:defaultValue="500"
            android:max="2000"
            app:min="100"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_general"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="auto_start_on_boot"
            android:title="@string/settings_auto_start"
            android:summary="@string/settings_auto_start_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="hide_notification"
            android:title="@string/settings_hide_notification"
            android:summary="@string/settings_hide_notification_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_display"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="use_metric"
            android:title="@string/settings_use_metric"
            android:summary="@string/settings_use_metric_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
