<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_launch_osmand"
        android:title="@string/action_launch_osmand"
        android:icon="@drawable/ic_map"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_settings_api"
        android:title="@string/settings_category_api"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_settings_general"
        android:title="@string/settings_category_general"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_settings_display"
        android:title="@string/settings_category_display"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_settings_range"
        android:title="@string/settings_category_range_estimation"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_settings_android_auto"
        android:title="@string/settings_category_android_auto"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_about"
        android:title="@string/settings_category_about"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_developer_settings"
        android:title="Developer Settings"
        android:visible="false"
        app:showAsAction="never" />
    
</menu>
