<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="app_version"
        android:title="@string/settings_version"
        android:selectable="true"
        android:background="@null"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="build_date"
        android:title="@string/settings_build_date"
        android:selectable="false"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="copyright"
        android:title="@string/settings_copyright"
        android:summary="@string/settings_copyright_summary"
        android:selectable="false"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="github_project"
        android:title="@string/settings_github"
        android:summary="@string/settings_github_summary"
        app:iconSpaceReserved="false" />
    
    <Preference
        android:key="developer_settings"
        android:title="Developer Settings"
        android:summary="Advanced diagnostics and data capture"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
